src/objects/TitleOwnershipDetail__c.object
<CustomObject>
    <description>Contains TORs and TOTs created during the reconciliation process between Tracts.co and Salesforce</description>
    <fields>
        <fullName>areaOperator__c</fullName>
        <label>Area Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <label>Area</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>assignedUser__c</fullName>
        <label>Assigned User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bonusOperator__c</fullName>
        <label>Bonus Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bonus__c</fullName>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bookPageFrm__c</fullName>
        <formula>book__c + &apos;/&apos; +  page__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book/Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bookPageOperator__c</fullName>
        <label>Book/Page Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bookPageTOT__c</fullName>
        <label>Book/Page</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>book__c</fullName>
        <label>Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countyOperator__c</fullName>
        <label>County Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>county__c</fullName>
        <label>County</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delay__c</fullName>
        <label>Delay</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>depthOperator__c</fullName>
        <label>Depth Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>depth__c</fullName>
        <label>Depth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>executiveOperator__c</fullName>
        <label>Executive Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>executive__c</fullName>
        <label>Executive</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>friendlyName__c</fullName>
        <formula>if(   CASESAFEID(RecordType.Id) == &apos;0120U0000000nW5QAI&apos;, &quot;TOT-&quot; + RIGHT(Name,  LEN(Name) -4),  &quot;TOR-&quot; + RIGHT(Name,  LEN(Name) -4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grossAcOperator__c</fullName>
        <label>Gross Ac Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grossAc__c</fullName>
        <label>Gross Ac</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ingress__c</fullName>
        <label>Ingress</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inst__c</fullName>
        <label>Inst.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>instrumentType__c</fullName>
        <description>Field to be set by system upon insertion or update and drive calculations for measurement and Tracts CO Calculation formula fields.</description>
        <label>Instrument Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leaseLOROperator__c</fullName>
        <label>Lease LOR Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>leaseLOR__c</fullName>
        <label>Lease LOR</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leaseOperator__c</fullName>
        <label>Lease Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lease__c</fullName>
        <label>Lease</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the TOT has been reconciled with a Tract record and can no longer be edited.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lorOperator__c</fullName>
        <label>LOR Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lor__c</fullName>
        <label>LOR</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>measurement__c</fullName>
        <formula>CASE( instrumentType__c  , 
&quot;UMI&quot;,&quot;NMA&quot;,  
&quot;MD&quot;,&quot;NRA&quot;, 
&quot;NPRI&quot;,&quot;NRA&quot;, 
&quot;OGL&quot;,&quot;NMA&quot;, 
&quot;ORRI&quot;,&quot;NRA&quot;, 
&quot;INVALID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Measurement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mineral__c</fullName>
        <label>Mineral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nlra__c</fullName>
        <label>NLRA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nma__c</fullName>
        <formula>grossAc__c * nri__c</formula>
        <label>NMA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nmra__c</fullName>
        <label>NMRA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npri8__c</fullName>
        <label>NPRI8</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nra__c</fullName>
        <formula>lor__c*grossAc__c*8</formula>
        <label>NRA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nriOperator__c</fullName>
        <label>NRI Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nri__c</fullName>
        <label>NRI</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>oiOperator__c</fullName>
        <label>OI Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>oi__c</fullName>
        <label>OI</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orri__c</fullName>
        <formula>grossAc__c*oi__c*8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORRI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageOperator__c</fullName>
        <label>Page Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>party__c</fullName>
        <label>Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quarterCallOperator__c</fullName>
        <label>Quarter Call Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quarterCall__c</fullName>
        <description>Store the value cross referenced in Quarter Call Mapping.</description>
        <label>Quarter Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordType__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relatedTORs__c</fullName>
        <description>This field is a system field and is used by custom code in Apex trigger TORTrigger.  This field should not be updated manually and if the actual field is deleted, the trigger will no longer operate as expected.  Holds the related TOR records on TOT creation</description>
        <label>RelatedTORs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>royaltyOperator__c</fullName>
        <label>Royalty Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>royalty__c</fullName>
        <label>Royalty</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surface__c</fullName>
        <label>Surface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>targetOwnershipName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Ownership Name</label>
        <referenceTo>TargetOwnershipName__c</referenceTo>
        <relationshipLabel>Title Ownership Details</relationshipLabel>
        <relationshipName>titleOwnershipDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>targetOwnershipTract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Should only be populated on Title Ownership Rows when there is a related Target Ownership Tract</description>
        <label>Target Ownership Tract</label>
        <referenceTo>TitleOwnershipDetail__c</referenceTo>
        <relationshipLabel>Title Ownership Details</relationshipLabel>
        <relationshipName>TitleOwnershipDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tonName__c</fullName>
        <formula>targetOwnershipName__r.ownerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>torGroupNum__c</fullName>
        <description>Stores the Group Number assigned from the totBuilder in the scope of a TON.</description>
        <label>TOR Group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tractsCOCalculation__c</fullName>
        <formula>CASE( instrumentType__c  , 
&quot;UMI&quot;,grossAc__c  *  executive__c,  
&quot;MD&quot;,lor__c * grossAc__c * 8, 
&quot;NPRI&quot;,lor__c * grossAc__c * 8, 
&quot;OGL&quot;,nri__c * grossAc__c, 
&quot;ORRI&quot;,oi__c * grossAc__c * 8, 
-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracts.CO Calculation</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wiOperator__c</fullName>
        <label>WI Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <isActive>false</isActive>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Override</fullName>
                    <isActive>false</isActive>
                    <label>Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wi__c</fullName>
        <label>WI</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Title Ownership Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>party__c</columns>
        <columns>lease__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TOD-{0000000000}</displayFormat>
        <label>TOD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title Ownership Details</pluralLabel>
    <recordTypes>
        <fullName>Target_Ownership_Tract</fullName>
        <active>true</active>
        <label>Target Ownership Tract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Ownership_Row</fullName>
        <active>true</active>
        <label>Title Ownership Row</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>